created a test section for passing data to homepage

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -57,4 +57,12 @@
         <img style="max-width: 100%" src="/images/hangers/hanger7.png" class="clothingItem">
         <img style="max-width: 100%" src="/images/hangers/hanger8.png" class="clothingItem">
     </aside>
+
+
+    <div class="test">
+        <h2>Title: {{ viewData.title }}</h2>
+    </div>
 </div>
+
+
+<!--<script src="./js/dataFetch.js"></script> -->
