--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,16 +8,69 @@ body {
     z-index: 0;
 };
 
+nav {
+    height: 20vh;
+}
+
+
+#openInstructions {
+  background-color: #3DD1E7;
+  border: 0 solid #E5E7EB;
+  box-sizing: border-box;
+  color: #000000;
+  display: flex;
+  font-family: ui-sans-serif,system-ui,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  font-size: 1rem;
+  font-weight: 700;
+  justify-content: center;
+  line-height: 1.75rem;
+  padding: .75rem 1.65rem;
+  text-align: center;
+  text-decoration: none #000000 solid;
+  text-decoration-thickness: auto;
+  width: 100%;
+  max-width: 460px;
+  cursor: pointer;
+  transform: rotate(-2deg);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+#openInstructions:focus {
+  outline: 0;
+}
+
+#openInstructions:after {
+  content: '';
+  position: absolute;
+  border: 1px solid #000000;
+  bottom: 4px;
+  left: 4px;
+  width: calc(100% - 1px);
+  height: calc(100% - 1px);
+}
+
+#openInstructions:hover:after {
+  bottom: 2px;
+  left: 2px;
+}
+
+@media (min-width: 768px) {
+    #openInstructions {
+    padding: .75rem 3rem;
+    font-size: 1.25rem;
+  }
+}
+
 .scrollPictures {
     z-index: 10;
-    height: 100vh;
+    height: 80vh;
     overflow-y: auto;
-    background-color: black !important;
 }
 
 #scrollPictures-left, #scrollPictures-right {
     z-index: 10;
-    height: 100vh;
+    height: 80vh;
     overflow-y: auto;
-    /* background-color: black !important; */
 }
