--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,1 +1,17 @@
 <h1>This is the login page</h1>
+
+<form>
+  <div class="form-group">
+    <label for="InputUsername">Username</label>
+    <input type="username" class="form-control" id="InputUsername" aria-describedby="emailHelp" placeholder="Enter username">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+  </div>
+    <aside id="scrollPictures-left" class="col-2 overflow-auto scrollPictures">
+       <a ><button id="openInstructions" type="button">Login</button></a>
+    </aside>
+</form>
+
+
