--- a/views/createoutfit.handlebars
+++ b/views/createoutfit.handlebars
@@ -16,20 +16,22 @@
 
     <!-- apply bootstrap mask to the carousel (https://mdbootstrap.com/docs/standard/content-styles/images/) -->
     <div class="col-8">
-        
+        <button id="save-bttn" type="button"Save Outfit></button>
     </div>
 
     <aside  id="scrollPictures-right"  class="col-2 overflow-auto scrollPictures">
         <!-- use different sizes lightbox from bootstrap for these images (https://mdbootstrap.com/docs/standard/components/lightbox/)
             if unavailable, use Mix&Match grid system (https://getbootstrap.com/docs/4.2/layout/grid/) -->
-        <img style="max-width: 100%" src="/images/hangers/hanger1.png" class="clothingItem">
-        <img style="max-width: 100%" src="/images/hangers/hanger2.png" class="clothingItem">
-        <img style="max-width: 100%" src="/images/hangers/hanger3.png" class="clothingItem">
-        <img style="max-width: 100%" src="/images/hangers/hanger4.png" class="clothingItem">
-        <img style="max-width: 100%" src="/images/hangers/hanger5.png" class="clothingItem">
-        <img style="max-width: 100%" src="/images/hangers/hanger6.png" class="clothingItem">
-        <img style="max-width: 100%" src="/images/hangers/hanger7.png" class="clothingItem">
-        <img style="max-width: 100%" src="/images/hangers/hanger8.png" class="clothingItem">
+       <ul>
+        {{#each forever21Data.response.docs}}
+        <li>
+            <div>{{title}}</div>
+
+            <img src="{{thumb_image}}" />
+            <button class="add-shirt" data-id="{{pid}}">Add to Outfit</button>
+        </li>
+        {{/each}}
+       </ul>
     </aside>
 
 
@@ -40,3 +42,4 @@
 
 
 <!--<script src="./js/dataFetch.js"></script> -->
+<script src="./js/logic.js"></script>
