created divs for images to create an outfit

--- a/views/createoutfit.handlebars
+++ b/views/createoutfit.handlebars
@@ -16,7 +16,10 @@
 
     <!-- apply bootstrap mask to the carousel (https://mdbootstrap.com/docs/standard/content-styles/images/) -->
     <div class="col-8">
-        <button id="save-bttn" type="button"Save Outfit></button>
+        <div id="saveshirt"></div>
+        <div id="savepants"></div>
+        <div id="saveshoes"></div>
+        <button id="save-bttn" type="button">Save Outfit</button>
     </div>
 
     <aside  id="scrollPictures-right"  class="col-2 overflow-auto scrollPictures">
