gave the images within the data area a id which is the pid from the api

--- a/views/createoutfit.handlebars
+++ b/views/createoutfit.handlebars
@@ -30,8 +30,7 @@
         <li>
             <div>{{title}}</div>
 
-            <img src="{{thumb_image}}" />
-            <button class="add-shirt" data-id="{{pid}}">Add to Outfit</button>
+            <img id="{{pid}}" src="{{thumb_image}}" />
         </li>
         {{/each}}
        </ul>
@@ -45,4 +44,4 @@
 
 
 <!--<script src="./js/dataFetch.js"></script> -->
-<script src="./js/logic.js"></script>
+<script src="../public/js/logic.js"></script>
