fixed sourcing of logic.js

--- a/views/createoutfit.handlebars
+++ b/views/createoutfit.handlebars
@@ -44,4 +44,4 @@
 
 
 <!--<script src="./js/dataFetch.js"></script> -->
-<script src="../public/js/logic.js"></script>
+<script src="../js/logic.js"></script>
