large amout of route work

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -10,7 +10,7 @@
     <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
   </div>
     <aside id="scrollPictures-left" class="col-2 overflow-auto scrollPictures">
-       <a ><button id="openInstructions" type="button">Login</button></a>
+       <a onclick="testClick()"><button id="openInstructions" type="button">Login</button></a>
     </aside>
 </form>
 
