created objects for holding titles of clothing and images

--- a/views/createoutfit.handlebars
+++ b/views/createoutfit.handlebars
@@ -30,10 +30,26 @@
     </aside>
 
     <!-- apply bootstrap mask to the carousel (https://mdbootstrap.com/docs/standard/content-styles/images/) -->
-    <div class="col-8">
-        <div id="saveshirt"></div>
-        <div id="savepants"></div>
-        <div id="saveshoes"></div>
+    <div  class="col-7 ">
+
+        
+        <ul id="builder" class="connectedSortable" style="height: 38%;">Shirt:
+
+            
+        </ul>
+
+        
+        <ul id="builder-pants" class="connectedSortable" style="height: 211px; background-color: blue;">Pants:
+
+            
+        </ul>
+
+        
+        <ul id="builder-shoes" class="connectedSortable" style="height: 211px; background-color: red;">Shoes:
+
+            
+        </ul>
+        
         <button id="save-bttn" type="button">Save Outfit</button>
     </div>
 
