--- a/views/createoutfit.handlebars
+++ b/views/createoutfit.handlebars
@@ -53,7 +53,7 @@
         <button id="save-bttn" type="button">Save Outfit</button>
     </div>
 
-    <aside  id="scrollPictures-right"  class="col-2 overflow-auto scrollPictures">
+    <div class="col-2 overflow-auto scrollPictures">
         <!-- use different sizes lightbox from bootstrap for these images (https://mdbootstrap.com/docs/standard/components/lightbox/)
             if unavailable, use Mix&Match grid system (https://getbootstrap.com/docs/4.2/layout/grid/) -->
        <ul>
