--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,7 @@
 <div class="row d-flex justify-content-between">
 
     <aside id="scrollPictures-left" class="col-2 overflow-auto scrollPictures">
-       <a href="/createoutfit"><button id="openInstructions" type="button">Get Started!</button></a>
+       <a href="/login"><button id="openInstructions" type="button">Get Started!</button></a>
     </aside>
 
     <!-- apply bootstrap mask to the carousel (https://mdbootstrap.com/docs/standard/content-styles/images/) -->
