--- a/views/createoutfit.handlebars
+++ b/views/createoutfit.handlebars
@@ -30,10 +30,11 @@
     </aside>
 
     <!-- apply bootstrap mask to the carousel (https://mdbootstrap.com/docs/standard/content-styles/images/) -->
-    <div  class="col-7 ">
+    <div  class="col-8">
+        <div id="outfitcontainer" class= "container d-flex justify-content-around">
 
         
-        <ul id="builder" class="connectedSortable" style="height: 38%;">Shirt:
+        <ul id="builder" class="connectedSortable" style="height: 211px;">Shirt:
 
             
         </ul>
@@ -49,8 +50,9 @@
 
             
         </ul>
+        </div>
         
-        <button id="save-bttn" type="button">Save Outfit</button>
+        <button id="save-bttn" clas="mx-auto" type="button">Save Outfit</button>
     </div>
 
     <div class="col-2 overflow-auto scrollPictures">
