--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,8 +1,13 @@
 <div class="row d-flex justify-content-between">
 
-    <aside id="scrollPictures-left" class="col-2 overflow-auto scrollPictures">
-       <a href="/createoutfit"><button id="openInstructions" type="button">Get Started!</button></a>
+    <div id="leftMenu scrollPictures-left" class="col-2 overflow-auto scrollPictures">
+        <aside id="" class="row menuButton">
+       <a href="/login"><button id="openInstructions" type="button">Get Started!</button></a>
     </aside>
+        <aside id="" class="row menuButton">
+       <a href="/createoutfit"><button id="openInstructions" type="button">How it works</button></a>
+    </aside>
+    </div>
 
     <!-- apply bootstrap mask to the carousel (https://mdbootstrap.com/docs/standard/content-styles/images/) -->
     <div id="carouselExampleIndicators" class="carousel slide col-8" data-ride="carousel">
