--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,9 +19,10 @@
     <nav class="container-fluid">
         <!-- used bootstrap auto-margins (https://getbootstrap.com/docs/4.2/utilities/flex/) this caused mobile view to mess up-->
         <div class="row d-flex  bd-highlight mb-3" id="navbar">
-            <div class="col-4 flex-fil p-2 bd-highlight text-center ">margin left</div>
-            <div class="col-4 flex-fil p-2 bd-highlight text-center "><img height="200px" src="" alt="" class="navLogo container"/>BANNER IMAGE</div>
-            <div class="col-4 flex-fil p-2 bd-highlight text-center ">margin right</div>
+            <div class="col-4 flex-fil p-2 bd-highlight text-center d-sm-none">margin left</div>
+            <div class="col-4 flex-fil p-2 bd-highlight text-center "><img src="./images/closet_banner.png" alt="" class="navLogo  image-fluid " 
+              style=" max-width: 100%; and height: 200px"/></div>
+            <div class="col-4 flex-fil p-2 bd-highlight text-center d-sm-none d-xs-none">margin right</div>
         </div>
     </nav>
 
