--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,11 +1,7 @@
 <div class="row d-flex justify-content-between">
 
-    <div id="leftMenu scrollPictures-left" class="col-2 overflow-auto scrollPictures">
-        <aside id="" class="row menuButton">
-       <a href="/login"><button id="openInstructions" type="button">Get Started!</button></a>
-    </aside>
-        <aside id="" class="row menuButton">
-       <a href="/createoutfit"><button id="openInstructions" type="button">How it works</button></a>
+    <aside id="scrollPictures-left" class="col-2 overflow-auto scrollPictures">
+       <a href="/createoutfit"><button id="openInstructions" type="button">Get Started!</button></a>
     </aside>
     </div>
 
