--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,10 +16,11 @@
 
 <body class="container-fluid align-items-stretch">
 
-    <nav class="container">
+
+    <nav class="container text-center">
         <!-- used bootstrap auto-margins (https://getbootstrap.com/docs/4.2/utilities/flex/) this caused mobile view to mess up-->
 
-            <div class="rounded mx-auto d-block "><img src="./images/closet_banner.png" alt="" class="navLogo  image-fluid " 
+            <div><img src="./images/closet_banner.png" alt="" class="navLogo  image-fluid" 
               style="max-height: 200px"></div>
 
     </nav>
