--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -26,6 +26,11 @@
       <p>Create an account</p>
 
      <div class="form-group">
+       <label for="name"><b>Username</b></label>
+       <input type="text" class="form-control" placeholder="Enter Username" name="name" required>
+     </div>
+
+     <div class="form-group">
        <label for="email"><b>Email</b></label>
        <input type="text" class="form-control" placeholder="Enter Email" name="email" required>
      </div>
