created an a href for the images to be clickable from the forever21 api

--- a/views/createoutfit.handlebars
+++ b/views/createoutfit.handlebars
@@ -63,9 +63,11 @@
             
             <li class="scroll-Pictures">
                 <div id="draggable">
+                    <a href="{{this.url}}">
                     <div id="image-title">{{this.title}}</div>
 
                     <img id="{{this.pid}}" src="{{this.thumb_image}}" />
+                    </a>
                 </div>
             </li>
             
