--- a/views/createoutfit.handlebars
+++ b/views/createoutfit.handlebars
@@ -15,19 +15,25 @@
     </nav>
 
     
-    <aside id="scrollPictures-left" class="col-2 overflow-auto scrollPictures">
+    <div class="col-2 overflow-auto scrollPictures">
         <!-- use different sizes lightbox from bootstrap for these images (https://mdbootstrap.com/docs/standard/components/lightbox/)
    if unavailable, use Mix&Match grid system (https://getbootstrap.com/docs/4.2/layout/grid/) -->
-        <img style="max-width: 100%" src="/images/hangers/hanger1.png" class="clothingItem">
-        <img style="max-width: 100%" src="/images/hangers/hanger2.png" class="clothingItem">
-        <img style="max-width: 100%" src="/images/hangers/hanger3.png" class="clothingItem">
-        <img style="max-width: 100%" src="/images/hangers/hanger4.png" class="clothingItem">
-        <img style="max-width: 100%" src="/images/hangers/hanger5.png" class="clothingItem">
-        <img style="max-width: 100%" src="/images/hangers/hanger6.png" class="clothingItem">
-        <img style="max-width: 100%" src="/images/hangers/hanger7.png" class="clothingItem">
-        <img style="max-width: 100%" src="/images/hangers/hanger8.png" class="clothingItem">
+        <ul id="scrollPictures-left" class="connectedSortable">
+            {{#each asosData.products}}
+            
+            <li class="scroll-Pictures-left">
+                <div id="draggable">
+                    <a href="https://{{this.url}}">
+                    <div id="image-title">{{this.name}}</div>
 
-    </aside>
+                    <img id="{{this.id}}" src="https://{{this.imageUrl}}" />
+                    </a>
+                </div>
+            </li>
+            
+        {{/each}}
+       </ul>
+    </div>
 
     <!-- apply bootstrap mask to the carousel (https://mdbootstrap.com/docs/standard/content-styles/images/) -->
     <div  class="col-7 ">
