--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,7 +20,7 @@ nav {
   background-color: #3DD1E7;
   border: 0 solid #E5E7EB;
   color: #000000;
-  display: flex;
+  /* display: flex; */
   font-family: ui-sans-serif,system-ui,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
   font-size: 1rem;
   font-weight: 700;
