--- a/views/createoutfit.handlebars
+++ b/views/createoutfit.handlebars
@@ -36,7 +36,8 @@
     </div>
 
     <!-- apply bootstrap mask to the carousel (https://mdbootstrap.com/docs/standard/content-styles/images/) -->
-    <div  class="col-8">
+    <div class="col-8">
+        <div class="row">
         <div id="outfitcontainer" class= "container d-flex justify-content-around">
 
         
@@ -57,8 +58,10 @@
             
         </ul>
         </div>
+        </div>
         
         <button id="save-bttn" clas="mx-auto" type="button">Save Outfit</button>
+         <div class="row">row</div>
     </div>
 
     <div class="col-2 overflow-auto scrollPictures">
