pushing login js

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,24 +3,11 @@
     <aside id="scrollPictures-left" class="col-2 overflow-auto scrollPictures">
        <a href="/login"><button id="openInstructions" type="button">Get Started!</button></a>
     </aside>
-
+    </div>
 
     <!-- apply bootstrap mask to the carousel (https://mdbootstrap.com/docs/standard/content-styles/images/) -->
-    <div id="carouselExampleIndicators" class="carousel slide col-8 d-flex justify-content-around" data-ride="carousel">
-        <div id="outfitSpace" class="container">
-            <div id="randomOutfit" class="row">
-                <figure class="figure col-4" id="randomShirt"><img src="" class="figure-img">Shirt
-                  <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
-                </figure>
-                <figure class="figure col-4" id="randomPantsx"><img src="" class="figure-img">Pants
-                  <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
-                </figure>
-                <figure class="figure col-4" id="randomShoes"><img src="" class="figure-img">Shoes
-                  <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
-                </figure>
+    <div id="carouselExampleIndicators" class="carousel slide col-8" data-ride="carousel">
 
-            </div>
-        </div>
     </div>
 
     <aside  id="scrollPictures-right"  class="col-2 overflow-auto scrollPictures">
@@ -38,7 +25,7 @@
 
     </aside>
 
- <script src="'../js/homepage.js"></script>
+
 
 </div>
 
