--- a/public/css/style.css
+++ b/public/css/style.css
@@ -71,7 +71,7 @@ nav {
   height: 65vh;
   overflow-y: auto;
   width: 82%;
-  background-image: linear-gradient(45deg, black, transparent);
+  /* background-image: linear-gradient(45deg, black, transparent); */
 }
 
 .dropdown{
