--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,6 @@
 <div class="row d-flex justify-content-between">
 
-    <aside id="scrollPictures-left" class="col-2 overflow-auto scrollPictures">
+    <aside id="loginButton" class="col-2 overflow-auto scrollPictures">
        <a href="/login"><button id="openInstructions" type="button">Get Started!</button></a>
     </aside>
     </div>
@@ -10,7 +10,7 @@
 
     </div>
 
-    <aside  id="scrollPictures-right"  class="col-2 overflow-auto scrollPictures">
+    <aside  id="signUpButton"  class="col-2 overflow-auto scrollPictures">
       
        {{!-- <ul>
         {{#each forever21Data.response.docs}}
